# pai-sho-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  simulator.py
.github/workflows/: test.yml
ai/: elo.py  logging_utils.py  registry.py  utils.py
ai/classical/: basic_minimax.py
ai/params/CNNBasic/: example_config.txt
ai/rl/: cnn_basic.py
ai/training/: cnn_basic_training.py  opponent_utils.py
game/: PaiShoGame.py  notation.py
tests/: basic_tests.py
ui/: server.py  simulate_manager.py  training_manager.py
ui/templates/: guide.html  index.html  leaderboard.html  rules.html  simulate.html  train.html
